css/theme.css
blockquote {
  color: #808080;
  border: none;
  padding-top: 0px;
  padding-bottom: 5px;
  margin-bottom: 5px;
}

blockquote p {
  font-size: 15px;
}

blockquote li {
  font-size: 15px;
}

div.footer {
  font-size: 13px;
}

/*
 * Collapsing navbar from
 *   https://coderwall.com/p/wpjw4w/change-the-bootstrap-navbar-breakpoint
 */
@media (max-width: 1600px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
}

